--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 .card img{
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 .s:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
